package entity.derived;public class Block {
